Update robot and app CSS files, shifting the robot position and adding new custom font classes. The 'robot-container' CSS rules were removed from the app.css file and slightly modified in the robot.css file. This change aims to simplify the codebase organization and adds potential for new styles with the introduction of 'Titillium Web' and 'Michroma' font classes.

--- a/apps/dfda-1/public/app/public/css/robot.css
+++ b/apps/dfda-1/public/app/public/css/robot.css
@@ -5,9 +5,9 @@
     width: 160px;
     height: 170px;
     bottom: -30px;
-    left: calc(100% - 160px);
-    z-index: 4; }
-
+    left: calc(100% - 300px);
+    z-index: 4;
+}
 .head {
     position: absolute;
     width: 130px;
