--- a/apps/dfda-1/public/app/public/css/app.css
+++ b/apps/dfda-1/public/app/public/css/app.css
@@ -25688,99 +25688,6 @@ img.intro-primary-outcome-variable-rating-buttons {
   z-index: 5;
   background-color: #db3236; }
 
-.robot-container {
-  box-sizing: border-box;
-  position: absolute;
-  width: 160px;
-  height: 170px;
-  bottom: -30px;
-  left: calc(100% - 160px);
-  z-index: 4; }
-
-.head {
-  position: absolute;
-  width: 130px;
-  left: 20px;
-  height: 100px;
-  border-radius: 490px 550px 550px 550px;
-  overflow: hidden;
-  background: #ccc linear-gradient(to right, #b7a9a9 0%, #c1b1b1 40%, #c1b5b5 60%, #ab9c9c 100%);
-  -webkit-transform-origin: 50% 100%;
-  transform-origin: 50% 100%;
-  -webkit-animation: bob 8000ms ease-in-out alternate infinite -1000ms;
-  animation: bob 8000ms ease-in-out alternate infinite -1000ms;
-  border: 2px solid #000000; }
-
-.eyes {
-  position: absolute;
-  top: calc(50% - 10px);
-  right: 25px;
-  left: 25px;
-  height: 20px;
-  -webkit-animation: blink 10000ms linear forwards infinite;
-  animation: blink 10000ms linear forwards infinite;
-  z-index: 0;  /* Needed to see eyes */
-}
-
-.eyeball {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  background: radial-gradient(ellipse, #dffdfe 0%, #11c1f3 50%, #387ef5 60%) no-repeat center;
-  background-size: 100%;
-  z-index: -2;
-  border-radius: 100%;
-  transition: background-size 0.2s;
-  border: 2px solid #000000; }
-
-.eyeball_left {
-  left: 0;
-  transition: -webkit-transform 100ms ease-in-out;
-  transition: transform 100ms ease-in-out;
-  transition: transform 100ms ease-in-out, -webkit-transform 100ms ease-in-out; }
-
-.eyeball_right {
-  right: 0;
-  transition: -webkit-transform 100ms ease-in-out;
-  transition: transform 100ms ease-in-out;
-  transition: transform 100ms ease-in-out, -webkit-transform 100ms ease-in-out; }
-
-.mouth {
-  position: absolute;
-  bottom: 15px;
-  left: 50px;
-  width: 30px;
-  height: 5px;
-  background-color: black;
-  overflow: hidden;
-  border-radius: 5px;
-  transition: height 100ms cubic-bezier(0.455, 0.03, 0.515, 0.955); }
-
-.mouth-container {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0; }
-
-.robot_speaking .mouth {
-  height: 15px; }
-
-.robot_speaking .mouth-container {
-  -webkit-animation: speakingAnim 0.3s infinite;
-  animation: speakingAnim 0.3s infinite; }
-
-.mouth-container-line {
-  position: absolute;
-  top: 30%;
-  height: 0px;
-  background-color: limegreen;
-  width: 100%;
-  margin-top: -1px; }
-
-.robot_speaking .mouth-container-line {
-  height: 3px; }
-
 .torso {
   position: absolute;
   bottom: 0;
@@ -27001,5 +26908,99 @@ body::after {
 	100% {
 		background-position: 0% 50%;
 	}
+}
+
+#presentation-background-image {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 2;
+}
+
+#presentation-background-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 3;
+}
+
+.michroma-regular {
+    font-family: "Michroma", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.titillium-web-extralight {
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+}
+
+.titillium-web-light {
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
+
+.titillium-web-regular {
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.titillium-web-semibold {
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+}
+
+.titillium-web-bold {
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.titillium-web-black {
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+}
+
+.titillium-web-extralight-italic {
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 200;
+    font-style: italic;
+}
+
+.titillium-web-light-italic {
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 300;
+    font-style: italic;
+}
+
+.titillium-web-regular-italic {
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+}
+
+.titillium-web-semibold-italic {
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 600;
+    font-style: italic;
+}
+
+.titillium-web-bold-italic {
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 700;
+    font-style: italic;
 }
 
