--- a/apps/dfda-1/public/app/public/templates/presentation.html
+++ b/apps/dfda-1/public/app/public/templates/presentation.html
@@ -26,6 +26,7 @@
      display: flex; justify-content: center;
      align-items: center; transform: translate(-50%, -50%);
      line-height: 1.3;
+     z-index: 5;
      text-shadow: 1px 1px 2px black">
     {{ state.title }}
 </div>
