--- a/apps/dfda-1/public/app/public/templates/presentation.html
+++ b/apps/dfda-1/public/app/public/templates/presentation.html
@@ -62,6 +62,7 @@ position: absolute;
             box-shadow: 0 0 10px #00ff00; /* Neon green shadow */">
         </ion-slide>
     </ion-slide-box>
+    <div id="caption-container"></div>
     <div ng-show="true"
          ng-include="'templates/robot.html'"
          ng-click="robotClick()"
