Video element, update robotics animation and content
Refined the facial expressions and movements in the robotics animation code for a smoother transition between slide changes. This update also includes a stop feature to halt autoplay during a slide change event. Additionally, unnecessary details and repetitive speech content in the slides have been removed to improve users' experience and deliver more concise information.

--- a/apps/dfda-1/public/app/public/templates/presentation.html
+++ b/apps/dfda-1/public/app/public/templates/presentation.html
@@ -4,6 +4,9 @@
     <video id="presentation-background-video" autoplay loop muted playsinline>
         <source src="{{state.backgroundVideo}}" type="video/mp4">
     </video>
+    <video id="presentation-video" autoplay loop muted playsinline>
+        <source src="{{state.video}}" type="video/mp4">
+    </video>
     <canvas id="rainbow-canvas"
             style="position: absolute; z-index: 1; display: block; opacity: 0.5; pointer-events: none; background-color: transparent;"></canvas>
     <div id="splash-screen"
@@ -42,7 +45,7 @@ position: absolute;
    right: 0;
    margin: auto;
    display: block;
-   border-radius: 20px;
+   border-radius: 10px;
    object-fit: contain;
    /*border: 5px solid #00ff00; !* Neon green border *!*/
    /*box-shadow: 0 0 10px #00ff00; !* Neon green shadow *!*/
