--- a/apps/dfda-1/public/app/public/css/app.css
+++ b/apps/dfda-1/public/app/public/css/app.css
@@ -26932,6 +26932,21 @@ body::after {
     z-index: 3;
 }
 
+#presentation-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    object-fit: contain;
+    z-index: 3;
+    margin: auto;
+}
+
 .michroma-regular {
     font-family: "Michroma", sans-serif;
     font-weight: 400;
