Add `AnalyzingCtrl` controller and related changes
Introduced a new `AnalyzingCtrl` to the application. Updated `index.html` to include the new controller script. Made several modifications in the `presentation.html` template such as adding new canvas elements and a few control buttons. Also added two new files: `analyzingCtrl.js`, which defines the new controller, and `analyzing-page.html`, a new template associated with the controller.

--- a/apps/dfda-1/public/app/public/templates/presentation.html
+++ b/apps/dfda-1/public/app/public/templates/presentation.html
@@ -9,6 +9,8 @@
     </video>
     <canvas id="rainbow-canvas"
             style="position: absolute; z-index: 1; display: block; opacity: 0.5; pointer-events: none; background-color: transparent;"></canvas>
+    <canvas id="siri-canvas" style="position: absolute; top: 70%; transform: translateY(-50%); width: 100%;
+            height: 400px; z-index: 1; pointer-events: none; "></canvas>
     <div id="splash-screen"
          class="splash-wrapper" style="width: 100%; position: absolute; height: 100%;">
         <div class="splash-grid"></div>
@@ -53,7 +55,7 @@ position: absolute;
 
     <ion-slide-box on-slide-changed="state.slideChanged(index)" style="z-index: 2;">
         <ion-slide ng-repeat="slide in state.slides">
-            <img ng-if="slide.image"
+<!--            <img ng-if="slide.image"
                  ng-src="{{slide.image}}"
                  style="max-width: 90%;
             max-height: 90%;
@@ -62,7 +64,7 @@ position: absolute;
             border-radius: 20px;
             object-fit: contain;
             border: 5px solid #00ff00; /* Neon green border */
-            box-shadow: 0 0 10px #00ff00; /* Neon green shadow */">
+            box-shadow: 0 0 10px #00ff00; /* Neon green shadow */">-->
         </ion-slide>
     </ion-slide-box>
     <div id="caption-container"></div>
@@ -75,6 +77,24 @@ position: absolute;
         id="backButton"
         ng-click="state.previous()"
         class="presentation-nav-button presentation-left-button"><</button>
+<!--    <button
+        id="toggleMusic"
+        ng-if="state.music"
+        style="right: 25px;"
+        ng-click="state.toggleMusic()"
+        class="presentation-nav-button presentation-right-button">🎵</button>
+    <button
+        id="pause"
+        ng-show="state.playing"
+        style="right: 50px;"
+        ng-click="state.pause()"
+        class="presentation-nav-button presentation-right-button">⏸️</button>
+    <button
+        id="play"
+        ng-show="!state.playing"
+        style="right: 50px;"
+        ng-click="state.slideChanged(state.slideIndex)"
+        class="presentation-nav-button presentation-right-button">▶️</button>-->
     <button
         id="nextButton"
         ng-click="state.next()"
