--- a/apps/dfda-1/public/app/public/css/app.css
+++ b/apps/dfda-1/public/app/public/css/app.css
@@ -27052,3 +27052,20 @@ body::after {
 .slider-pager {
     display: none !important;
 }
+
+.presentation-title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: white;
+    font-size: 60px;
+    font-weight: bold;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translate(-50%, -50%);
+    line-height: 1.3;
+    z-index: 5;
+    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+}
