--- a/apps/dfda-1/public/app/public/templates/presentation.html
+++ b/apps/dfda-1/public/app/public/templates/presentation.html
@@ -24,15 +24,7 @@
         </div>
     </div>
 <div ng-if="state.title"
-     class="michroma-regular"
-     style="position: absolute; top: 50%; left: 50%;
-     color: white; font-size: 60px; font-weight: bold;
-        text-align: center;
-     display: flex; justify-content: center;
-     align-items: center; transform: translate(-50%, -50%);
-     line-height: 1.3;
-     z-index: 5;
-     text-shadow: 1px 1px 2px black">
+     class="michroma-regular presentation-title">
     {{ state.title }}
 </div>
 
