--- a/apps/dfda-1/public/app/public/templates/human.html
+++ b/apps/dfda-1/public/app/public/templates/human.html
@@ -11,18 +11,12 @@
                 <div class="human-eyeball human-eyeball_left"></div>
                 <div class="human-eyeball human-eyeball_right"></div>
             </div>
-            <div class="human-mouth" ng-click="setSpeechEnabled(false)" aria-label="mute" ng-if="speechEnabled">
-                <md-tooltip>Shut Up, Robot!</md-tooltip>
+            <div id="human-mouth"
+                class="human-mouth">
                 <div class="human-mouth-container">
                     <div class="human-mouth-container-line"></div>
                 </div>
             </div>
-            <md-button class="md-icon-button" ng-click="setSpeechEnabled(true)" aria-label="un-mute"
-                       style="margin-top: 40%; margin-left: 34%;" ng-if="!speechEnabled">
-                <md-icon class="ion-volume-mute" style="font-size: 30px;">
-                    <md-tooltip>Enable Freedom of Speech</md-tooltip>
-                </md-icon>
-            </md-button>
         </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" style="display:none">
